third_party/move/move-compiler-v2/tests/more-v1/parser/function_native_with_body.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/function_native_with_body.move:3:21
  │
3 │     native fun fn() {}
  │                     ^
  │                     │
  │                     Unexpected '{'
  │                     Expected ';'
